--- a/index.html
+++ b/index.html
@@ -4,20 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <title>Abilities Hope Inc</title>
+  <link href="style.css" rel="stylesheet" />
 </head>
 
 <body>
-  Hello1 world
-  <script src="script.js"></script>
+  <h1>Abilities Hope Inc</h1>
 
-  <!--
-  This script places a badge on your repl's full-browser view back to your repl's cover
-  page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
-  teal, blue, blurple, magenta, pink!
-  -->
-  <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
 </body>
 
 </html>
