--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 
 <body>
-  <div><h1>Abilities Hope Inc</h1></div>
-  
-
+  <header><h1>Abilities Hope Inc</h1></header>
+  <nav>Nav Bar</nav>
+  <main>main</main>
+  <footer>footer</footer>
 </body>
 
 </html>
