--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 
 <body>
   <header><h1>Abilities Hope Inc</h1></header>
-  <nav>Nav Bar</nav>
+  <nav>
+    <ul>
+      <li>Home </li>
+      <li>About Us</li>
+      <li>Contact Us</li>
+    </ul></ul></nav>
   <main>main</main>
   <footer>footer</footer>
 </body>
