--- a/index.html
+++ b/index.html
@@ -16,7 +16,33 @@
       <li>About Us</li>
       <li>Contact Us</li>
     </ul></ul></nav>
-  <main>main</main>
+  <main>
+    <p>Locking arms and hearts with those of us that have special needs.</p>
+    <figure>
+      <img src="images/Img001Rehab.jpg" alt="man doing rehab">
+      <figcaption>Rehabilitation</figcaption>
+    </figure>
+        <figure class=image1>
+      <img src="images/Img001Rehab.jpg" alt="man doing rehab">
+      <figcaption>Rehabilitation</figcaption>
+    </figure>
+        <figure class=image1>
+      <img src="images/Img001Rehab.jpg" alt="man doing rehab">
+      <figcaption>Rehabilitation</figcaption>
+    </figure>
+        <figure class=image1>
+      <img src="images/Img001Rehab.jpg" alt="man doing rehab">
+      <figcaption>Rehabilitation</figcaption>
+    </figure>
+        <figure class=image1>
+      <img src="images/Img001Rehab.jpg" alt="man doing rehab">
+      <figcaption>Rehabilitation</figcaption>
+    </figure>
+        <figure class=image1>
+      <img src="images/Img001Rehab.jpg" alt="man doing rehab">
+      <figcaption>Rehabilitation</figcaption>
+    </figure>
+  </main>
   <footer>footer</footer>
 </body>
 
