--- a/index.html
+++ b/index.html
@@ -17,29 +17,31 @@
       <li>Contact Us</li>
     </ul></ul></nav>
   <main>
-    <p>Locking arms and hearts with those of us that have special needs.</p>
+    <p>
+      <h3>Locking arms and hearts with those of us that have special needs.</h3>
+    </p>
     <figure>
       <img src="images/Img001Rehab.jpg" alt="man doing rehab">
       <figcaption>Rehabilitation</figcaption>
     </figure>
-        <figure class=image1>
-      <img src="images/Img001Rehab.jpg" alt="man doing rehab">
+        <figure>
+      <img src="images/Img002Therapy.jpg" alt="man doing rehab">
+      <figcaption>Rehabilitation</figcaption>
+    </figure>
+        <figure>
+      <img src="images/Img003AssistiveDevice.jpg" alt="man doing rehab">
+      <figcaption>Rehabilitation</figcaption>
+    </figure>
+        <figure class>
+      <img src="images/Img004Hope01.jpg" alt="man doing rehab">
+      <figcaption>Rehabilitation</figcaption>
+    </figure>
+        <figure>
+      <img src="images/Img005Hope02.jpg" alt="man doing rehab">
       <figcaption>Rehabilitation</figcaption>
     </figure>
         <figure class=image1>
-      <img src="images/Img001Rehab.jpg" alt="man doing rehab">
-      <figcaption>Rehabilitation</figcaption>
-    </figure>
-        <figure class=image1>
-      <img src="images/Img001Rehab.jpg" alt="man doing rehab">
-      <figcaption>Rehabilitation</figcaption>
-    </figure>
-        <figure class=image1>
-      <img src="images/Img001Rehab.jpg" alt="man doing rehab">
-      <figcaption>Rehabilitation</figcaption>
-    </figure>
-        <figure class=image1>
-      <img src="images/Img001Rehab.jpg" alt="man doing rehab">
+      <img src="images/Img006Hope03.jpg" alt="man doing rehab">
       <figcaption>Rehabilitation</figcaption>
     </figure>
   </main>
