--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <nav>
     <ul>
       <li>Home </li>
-      <li>About Us</li>
+      <li><a href=
+          "AboutUs.html">About Us</a></li>
       <li>Contact Us</li>
     </ul></ul></nav>
   <main>
