About us footer

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -7,3 +7,9 @@
   <title>Abilities Hope Inc</title>
   <link href="style.css" rel="stylesheet" />
 </head>
+
+<body>
+<header></header>
+<main></main>
+<footer> 2023 Abilities Hope Inc</footer>
+</body>
