--- a/AboutUs.html
+++ b/AboutUs.html
@@ -1,15 +1,47 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Abilities Hope Inc</title>
-  <link href="style.css" rel="stylesheet" />
-</head>
+  <head>
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width">
+   <title>Abilities Hope Inc</title>
+   <link href="style.css" rel="stylesheet" />
+  </head>
 
-<body>
-<header></header>
-<main></main>
-<footer> 2023 Abilities Hope Inc</footer>
-</body>
+  <body>
+    <header><h1>Abilities Hope Inc</h1></header>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home </a></li>
+      <li><a href=
+          "AboutUs.html">About Us</a></li>
+      <li>Contact Us</li>
+    </ul></ul>
+  </nav>
+    <main>
+      <p>
+        <h3>Vision</h3>
+        The vision of  Abilities Hope Incorporation is  a society in which people  with disabilities(PWD() have access to resources which will make them  live independently. 
+      </p>
+      <p>
+        <h3>Mission</h3>
+        Abilities Hope Incorporation focusses on building hope among   PWD, exposing them to opportunities, and exploring  intervention methods  which will reduce the burden  of disabilities. 
+      </p>
+      <p>
+        <h3>Needs & Challenges</h3>
+      </p>
+      <p>
+        <h3>Plan</h3>
+      </p>
+      <p>
+        <h3>Current Initiatives</h3>
+      </p>
+      <p>
+        <h3>Delivery Model</h3>
+      </p>
+      <p>
+        <h3>Future Service</h3>
+      </p>
+    </main>
+    <footer> 2023 Abilities Hope Inc</footer>
+  </body>
