--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
   <header><h1>Abilities Hope Inc</h1></header>
   <nav>
     <ul>
-      <li>Home </li>
+      <li><a href="index.html">Home </a></li>
       <li><a href=
           "AboutUs.html">About Us</a></li>
       <li>Contact Us</li>
-    </ul></ul></nav>
+    </ul></ul>
+  </nav>
   <main>
     <p>
       <h3>Locking arms and hearts with those of us that have special needs.</h3>
