--- a/AboutUs.html
+++ b/AboutUs.html
@@ -29,6 +29,7 @@
       </p>
       <p>
         <h3>Needs & Challenges</h3>
+        In Nigeria, the support given to people with disabilities (PWD) is minimal. First parents struggle to accept the reality of birthing and parenting their children who has special needs. Families  lack means of providing meals, medical care, assistive devices, and essential needs for their dependents .Furthermore relatives of PWD have no knowledge of how to access and adapt resources that will make their dependents function independently. To compound the problem members of the community ridicule, alienate, and isolate PWD. Indeed taking care of PWD and finding resources to meet their daily needs is a challenging task. 
       </p>
       <p>
         <h3>Plan</h3>
