--- a/ResourcesNeeded.html
+++ b/ResourcesNeeded.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <h1>Abilities Hope Inc</h1>
-      <h2>About Us</h2>
+      <h2>Resources Needed</h2>
     </header>
   <nav>
     <ul>
@@ -23,22 +23,9 @@
     </ul></ul>
   </nav>
     <main>
+
       <p>
-        <h3>Vision</h3>
-        The vision of  Abilities Hope Incorporation is  a society in which people  with disabilities(PWD() have access to resources which will make them  live independently. 
-      </p>
-      <p>
-        <h3>Mission</h3>
-        Abilities Hope Incorporation focusses on building hope among   PWD, exposing them to opportunities, and exploring  intervention methods  which will reduce the burden  of disabilities. 
-      </p>
-      <p>
-        <h3>Needs & Challenges</h3>
-        In Nigeria, the support given to people with disabilities (PWD) is minimal. First parents struggle to accept the reality of birthing and parenting their children who has special needs. Families  lack means of providing meals, medical care, assistive devices, and essential needs for their dependents .Furthermore relatives of PWD have no knowledge of how to access and adapt resources that will make their dependents function independently. To compound the problem members of the community ridicule, alienate, and isolate PWD. Indeed taking care of PWD and finding resources to meet their daily needs is a challenging task. 
-      </p>
-      <p>
-        <h3>Plan</h3>
-Abilities Hope Incorporation plans to assist  PWD and their families who face these  challenges. We will provide assistive devices to  PWD who need assistance in moving , in hearing and  in seeing. We will help PWD. 
- to acquire skills which will make them function at their full potential and  focus on  improving   the quality  of live for  PWD by giving them support as follows:
+        <h3>Short Term</h3>
         <ol>
           <li>Provide  food, clothing, educational materials , school supplies  medical needs, and adaptive devises for families with low income.</li>
           <li>Provide funds for paying school fees and equipping vocational centers  for the use of PWD.              </li>
