--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       <li><a href="index.html">Home </a></li>
       <li><a href=
           "AboutUs.html">About Us</a></li>
+      <li><a href=
+          "ResourcesNeeded.html">Resources Needed</a></li>
       <li>Contact Us</li>
     </ul></ul>
   </nav>
