--- a/ResourcesNeeded.html
+++ b/ResourcesNeeded.html
@@ -35,13 +35,10 @@
           <li>Educate people on what they can do to care and support  the disabled.</li>
         </ol>
       </p>
+
       <p>
-        <h3>Current Initiatives</h3>
-        Abilities Hope Incorporation serves children  and their families at  two residential homes for the disabled, four  primary Schools, one secondary school, and three institutions of higher learning . 
-      </p>
-      <p>
-        <h3>Delivery Model</h3>
-        Since 2016  Abilities Hope Incorporation embarked on these projects and services. 
+        <h3>Long Term</h3>
+
         <ol>
           <li>Encouraged parents of students with cerebral palsy and down syndrome allow their children  to attend school every day.</li>
           <li>Provided  funds to  purchase  uniforms, sportswear, adaptive devises and educational materials at four primary schools. Equipped  Vocational Skills Center at two schools for the handicap. </li>
