--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Abilities Hope Inc</title>
+  <title>Abilities Hope Inc, supporting independence</title>
+  <meta name="description" content="Building a society where people with disabilities have access to resources that allow for independent living.">
   <link href="style.css" rel="stylesheet" />
 </head>
 
