--- a/index.html
+++ b/index.html
@@ -4,53 +4,57 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Abilities Hope Inc, supporting independence</title>
-  <meta name="description" content="Building a society where people with disabilities have access to resources that allow for independent living.">
+  <title>Abilities Hope Inc, Supporting Independence</title>
+  <meta name="description"
+    content="Building a society where people with disabilities have access to resources that allow for independent living.">
   <link href="style.css" rel="stylesheet" />
 </head>
 
 <body>
-  <header><h1>Abilities Hope Inc</h1></header>
+  <header>
+    <img src="images/010AbilitiesHopeIcon.png" alt="triangular icon">
+    <h1>Abilities Hope Inc</h1></h1>
+  </header>
+  
   <nav>
     <ul>
-      <li><a href="index.html">Home </a></li>
-      <li><a href=
-          "AboutUs.html">About Us</a></li>
-      <li><a href=
-          "ResourcesNeeded.html">Resources Needed</a></li>
+      <li><a href="index.html">Home   </a></li>
+      <li><a href="AboutUs.html">About Us</a></li>
+      <li><a href="ResourcesNeeded.html">Resources Needed</a></li>
       <li>Contact Us</li>
-    </ul></ul>
+    </ul>
+    </ul>
   </nav>
   <main>
     <p>
-      <h4>Locking arms and hearts with those of us that have special needs.</h4>
+    <h4>Locking arms and hearts with those of us that have special needs.</h4>
     </p>
     <figure>
       <img src="images/Img001Rehab.jpg" alt="man doing rehab">
       <figcaption>Rehabilitation</figcaption>
     </figure>
-        <figure>
-      <img src="images/Img002Therapy.jpg" alt="man doing rehab">
-      <figcaption>Rehabilitation</figcaption>
+    <figure>
+      <img src="images/Img002Therapy.jpg" alt="Therapy">
+      <figcaption>Therapy</figcaption>
     </figure>
-        <figure>
+    <figure>
       <img src="images/Img003AssistiveDevice.jpg" alt="man doing rehab">
       <figcaption>Rehabilitation</figcaption>
     </figure>
-        <figure class>
+    <figure class>
       <img src="images/Img004Hope01.jpg" alt="man doing rehab">
       <figcaption>Rehabilitation</figcaption>
     </figure>
-        <figure>
+    <figure>
       <img src="images/Img005Hope02.jpg" alt="man doing rehab">
       <figcaption>Rehabilitation</figcaption>
     </figure>
-        <figure class=image1>
+    <figure class=image1>
       <img src="images/Img006Hope03.jpg" alt="man doing rehab">
       <figcaption>Rehabilitation</figcaption>
     </figure>
   </main>
-  <footer>footer</footer>
+  <footer>2023 designed by Software Strategy Solutions</footer>
 </body>
 
 </html>
