--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <figcaption>Therapy</figcaption>
     </figure>
     <figure>
-      <img src="images/Img003AssistiveDevice.jpg" alt="man doing rehab">
+      <img src="images/Img003AssistiveDevice.jpg" alt="Assistive Device">
       <figcaption>Rehabilitation</figcaption>
     </figure>
     <figure class>
