--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
     </figure>
     <figure>
       <img src="images/Img003AssistiveDevice.jpg" alt="Assistive Device">
-      <figcaption>Rehabilitation</figcaption>
+      <figcaption>Assistive Device</figcaption>
     </figure>
     <figure class>
       <img src="images/Img004Hope01.jpg" alt="man doing rehab">
-      <figcaption>Rehabilitation</figcaption>
+      <figcaption>Strengthening independe</figcaption>
     </figure>
     <figure>
       <img src="images/Img005Hope02.jpg" alt="man doing rehab">
