--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
       <figcaption>Assistive Device</figcaption>
     </figure>
     <figure class>
-      <img src="images/Img004Hope01.jpg" alt="man doing rehab">
-      <figcaption>Strengthening independe</figcaption>
+      <img src="images/Img004Hope01.jpg" alt="Strengthening independece">
+      <figcaption>Strengthening independence</figcaption>
     </figure>
     <figure>
       <img src="images/Img005Hope02.jpg" alt="man doing rehab">
