--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
       <figcaption>Strengthening independence</figcaption>
     </figure>
     <figure>
-      <img src="images/Img005Hope02.jpg" alt="man doing rehab">
-      <figcaption>Rehabilitation</figcaption>
+      <img src="images/Img005Hope02.jpg" alt="Strengthening independence">
+      <figcaption>Strengthening independence</figcaption>
     </figure>
     <figure class=image1>
       <img src="images/Img006Hope03.jpg" alt="man doing rehab">
