--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <figcaption>Strengthening independence</figcaption>
     </figure>
     <figure class=image1>
-      <img src="images/Img006Hope03.jpg" alt="man doing rehab">
+      <img src="images/Img006Hope03.jpg" alt="Strengthening independence">
       <figcaption>Rehabilitation</figcaption>
     </figure>
   </main>
