--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <figure class>
       <img src="images/Img004Hope01.jpg" alt="Strengthening independece">
       <figcaption>Strengthening independence</figcaption>
-    </figure>
+    </figure>Rehabilitation
     <figure>
       <img src="images/Img005Hope02.jpg" alt="Strengthening independence">
       <figcaption>Strengthening independence</figcaption>
