--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
     <figure class>
       <img src="images/Img004Hope01.jpg" alt="Strengthening independece">
       <figcaption>Strengthening independence</figcaption>
-    </figure>Rehabilitation
-    <figure>
+    </figure>Strengthening independence<figure>
       <img src="images/Img005Hope02.jpg" alt="Strengthening independence">
       <figcaption>Strengthening independence</figcaption>
     </figure>
