--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </figure>
     <figure class=image1>
       <img src="images/Img006Hope03.jpg" alt="Strengthening independence">
-      <figcaption>Rehabilitation</figcaption>
+      <figcaption>Strengthening independence</figcaption>
     </figure>
   </main>
   <footer>2023 designed by Software Strategy Solutions</footer>
