--- a/ResourcesNeeded.html
+++ b/ResourcesNeeded.html
@@ -27,12 +27,12 @@
       <p>
         <h3>Short Term</h3>
         <ol>
-          <li>Provide  food, clothing, educational materials , school supplies  medical needs, and adaptive devises for families with low income.</li>
-          <li>Provide funds for paying school fees and equipping vocational centers  for the use of PWD.              </li>
-          <li>Hire specialists , therapists, who will teach  PWD survival skills and assist children with disabilities or developmental delays to reach key milestones.</li>
-          <li>Act as  an ambassador and an  advocate  to  government agencies and outline  what we can do to improve as well as expand services we provide to PWD. 
+          <li>Assistive devices such as hearing aids, walking sticks, braille books , wheelchairs etc.</li>
+          <li>Equipment and trainers who will teach survival skills at  Vocational Centers.</li>
+          <li>Food, clothing, educational materials , school supplies and  medical needs.</li>
+          <li>Specialists and therapists  who will coach children with disabilities or developmental delays to reach key milestones. 
             </li>
-          <li>Educate people on what they can do to care and support  the disabled.</li>
+          <li>Website to educate people on what they can do to care and support  the disabled.</li>
         </ol>
       </p>
 
@@ -40,10 +40,8 @@
         <h3>Long Term</h3>
 
         <ol>
-          <li>Encouraged parents of students with cerebral palsy and down syndrome allow their children  to attend school every day.</li>
-          <li>Provided  funds to  purchase  uniforms, sportswear, adaptive devises and educational materials at four primary schools. Equipped  Vocational Skills Center at two schools for the handicap. </li>
-          <li>Provided financial assistance to students attending  the Deaf Unit at  a Grammar School. Paid school fees of students who are hard of hearing and visually impaired , Federal Government College for Special Needs, and the  University of Ibadan .</li>
-          <li>Assisted low-income earners to pay for rehabilitation, therapy, and surgery</li>
+          <li>Build residential homes  where PWD will experience  independence ,  while they  pursue academic and vocational goals.  </li>
+          <li>Act as  an ambassador  to  government agencies and outline  what we can do to improve as well as expand services we provide to PWD.</li>
         </ol>
       </p>
       <p>
