--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 <body>
   <header>
     <img src="images/010AbilitiesHopeIcon.png" alt="triangular icon">
-    <h1>Abilities Hope Inc</h1></h1>
+    <h1>Abilities Hope Inc</h1>
+    </h1>
   </header>
-  
+
   <nav>
     <ul>
-      <li><a href="index.html">Home   </a></li>
+      <li><a href="index.html">Home </a></li>
       <li><a href="AboutUs.html">About Us</a></li>
       <li><a href="ResourcesNeeded.html">Resources Needed</a></li>
       <li>Contact Us</li>
@@ -44,7 +45,7 @@
     <figure class>
       <img src="images/Img004Hope01.jpg" alt="Strengthening independece">
       <figcaption>Strengthening independence</figcaption>
-    </figure>Strengthening independence<figure>
+    </figure>
       <img src="images/Img005Hope02.jpg" alt="Strengthening independence">
       <figcaption>Strengthening independence</figcaption>
     </figure>
