--- a/AboutUs.html
+++ b/AboutUs.html
@@ -1,71 +1,90 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-   <meta charset="utf-8">
-   <meta name="viewport" content="width=device-width">
-   <title>Abilities Hope Inc</title>
-   <link href="style.css" rel="stylesheet" />
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Abilities Hope Inc</title>
+  <link href="style.css" rel="stylesheet" />
+</head>
 
-  <body>
-    <header>
-      <h1>Abilities Hope Inc</h1>
-      <h2>About Us</h2>
-    </header>
+<body>
+  <header>
+    <h1>Abilities Hope Inc</h1>
+    <h2>About Us</h2>
+  </header>
   <nav>
     <ul>
       <li><a href="index.html">Home </a></li>
-      <li><a href=
-          "AboutUs.html">About Us</a></li>
+      <li><a href="AboutUs.html">About Us</a></li>
       <li><a href="ResourcesNeeded.html">Resources Needed</a></li>
       <li>Contact Us</li>
-    </ul></ul>
+    </ul>
+    </ul>
   </nav>
-    <main>
-      <p>
-        <h3>Vision</h3>
-        The vision of  Abilities Hope Incorporation is  a society in which people  with disabilities(PWD() have access to resources which will make them  live independently. 
-      </p>
-      <p>
-        <h3>Mission</h3>
-        Abilities Hope Incorporation focusses on building hope among   PWD, exposing them to opportunities, and exploring  intervention methods  which will reduce the burden  of disabilities. 
-      </p>
-      <p>
-        <h3>Needs & Challenges</h3>
-        In Nigeria, the support given to people with disabilities (PWD) is minimal. First parents struggle to accept the reality of birthing and parenting their children who has special needs. Families  lack means of providing meals, medical care, assistive devices, and essential needs for their dependents .Furthermore relatives of PWD have no knowledge of how to access and adapt resources that will make their dependents function independently. To compound the problem members of the community ridicule, alienate, and isolate PWD. Indeed taking care of PWD and finding resources to meet their daily needs is a challenging task. 
-      </p>
-      <p>
-        <h3>Plan</h3>
-Abilities Hope Incorporation plans to assist  PWD and their families who face these  challenges. We will provide assistive devices to  PWD who need assistance in moving , in hearing and  in seeing. We will help PWD. 
- to acquire skills which will make them function at their full potential and  focus on  improving   the quality  of live for  PWD by giving them support as follows:
-        <ol>
-          <li>Provide  food, clothing, educational materials , school supplies  medical needs, and adaptive devises for families with low income.</li>
-          <li>Provide funds for paying school fees and equipping vocational centers  for the use of PWD.              </li>
-          <li>Hire specialists , therapists, who will teach  PWD survival skills and assist children with disabilities or developmental delays to reach key milestones.</li>
-          <li>Act as  an ambassador and an  advocate  to  government agencies and outline  what we can do to improve as well as expand services we provide to PWD. 
-            </li>
-          <li>Educate people on what they can do to care and support  the disabled.</li>
-        </ol>
-      </p>
-      <p>
-        <h3>Current Initiatives</h3>
-        Abilities Hope Incorporation serves children  and their families at  two residential homes for the disabled, four  primary Schools, one secondary school, and three institutions of higher learning . 
-      </p>
-      <p>
-        <h3>Delivery Model</h3>
-        Since 2016  Abilities Hope Incorporation embarked on these projects and services. 
-        <ol>
-          <li>Encouraged parents of students with cerebral palsy and down syndrome allow their children  to attend school every day.</li>
-          <li>Provided  funds to  purchase  uniforms, sportswear, adaptive devises and educational materials at four primary schools. Equipped  Vocational Skills Center at two schools for the handicap. </li>
-          <li>Provided financial assistance to students attending  the Deaf Unit at  a Grammar School. Paid school fees of students who are hard of hearing and visually impaired , Federal Government College for Special Needs, and the  University of Ibadan .</li>
-          <li>Assisted low-income earners to pay for rehabilitation, therapy, and surgery</li>
-        </ol>
-      </p>
-      <p>
-        <h3>Future Service</h3>
-        We hope  to increase the number of people we cater for and provide opportunities to expand the services we give to PWD.  Therefore We   are seeking financial support from Faith Based Organizations, Grant Providers, Banks, Companies , Businesses, Philanthropists.
-      </p>
-    </main>
-    <footer> 2023 Abilities Hope Inc</footer>
-  </body>
+  <main>
+    <p>
+    <h3>Vision</h3>
+    The vision of Abilities Hope Incorporation is a society in which people with disabilities(PWD() have access to
+    resources which will make them live independently.
+    </p>
+    <p>
+    <h3>Mission</h3>
+    Abilities Hope Incorporation focusses on building hope among PWD, exposing them to opportunities, and exploring
+    intervention methods which will reduce the burden of disabilities.
+    </p>
+    <p>
+    <h3>Needs & Challenges</h3>
+    In Nigeria, the support given to people with disabilities (PWD) is minimal. First parents struggle to accept the
+    reality of birthing and parenting their children who has special needs. Families lack means of providing meals,
+    medical care, assistive devices, and essential needs for their dependents .Furthermore relatives of PWD have no
+    knowledge of how to access and adapt resources that will make their dependents function independently. To compound
+    the problem members of the community ridicule, alienate, and isolate PWD. Indeed taking care of PWD and finding
+    resources to meet their daily needs is a challenging task.
+    </p>
+    <p>
+    <h3>Plan</h3>
+    Abilities Hope Incorporation plans to assist PWD and their families who face these challenges. We will provide
+    assistive devices to PWD who need assistance in moving , in hearing and in seeing. We will help PWD.
+    to acquire skills which will make them function at their full potential and focus on improving the quality of live
+    for PWD by giving them support as follows:
+    <ol>
+      <li>Provide food, clothing, educational materials , school supplies medical needs, and adaptive devises for
+        families with low income.</li>
+      <li>Provide funds for paying school fees and equipping vocational centers for the use of PWD. </li>
+      <li>Hire specialists , therapists, who will teach PWD survival skills and assist children with disabilities or
+        developmental delays to reach key milestones.</li>
+      <li>Act as an ambassador and an advocate to government agencies and outline what we can do to improve as well as
+        expand services we provide to PWD.
+      </li>
+      <li>Educate people on what they can do to care and support the disabled.</li>
+    </ol>
+    </p>
+    <p>
+    <h3>Current Initiatives</h3>
+    Abilities Hope Incorporation serves children and their families at two residential homes for the disabled, four
+    primary Schools, one secondary school, and three institutions of higher learning .
+    </p>
+    <p>
+    <h3>Delivery Model</h3>
+    Since 2016 Abilities Hope Incorporation embarked on these projects and services.
+    <ol>
+      <li>Encouraged parents of students with cerebral palsy and down syndrome allow their children to attend school
+        every day.</li>
+      <li>Provided funds to purchase uniforms, sportswear, adaptive devises and educational materials at four primary
+        schools. Equipped Vocational Skills Center at two schools for the handicap. </li>
+      <li>Provided financial assistance to students attending the Deaf Unit at a Grammar School. Paid school fees of
+        students who are hard of hearing and visually impaired , Federal Government College for Special Needs, and the
+        University of Ibadan .</li>
+      <li>Assisted low-income earners to pay for rehabilitation, therapy, and surgery</li>
+    </ol>
+    </p>
+    <p>
+    <h3>Future Service</h3>
+    We hope to increase the number of people we cater for and provide opportunities to expand the services we give to
+    PWD. Therefore We are seeking financial support from Faith Based Organizations, Grant Providers, Banks, Companies ,
+    Businesses, Philanthropists.
+    </p>
+  </main>
+  <footer> 2023 Abilities Hope Inc</footer>
+</body>
