--- a/ResourcesNeeded.html
+++ b/ResourcesNeeded.html
@@ -1,53 +1,58 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-   <meta charset="utf-8">
-   <meta name="viewport" content="width=device-width">
-   <title>Abilities Hope Inc</title>
-   <link href="style.css" rel="stylesheet" />
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Abilities Hope Inc</title>
+  <link href="style.css" rel="stylesheet" />
+</head>
 
-  <body>
-    <header>
-      <h1>Abilities Hope Inc</h1>
-      <h2>Resources Needed</h2>
-    </header>
+<body>
+  <header>
+    <h1>Abilities Hope Inc</h1>
+    <h2>Resources Needed</h2>
+  </header>
   <nav>
     <ul>
       <li><a href="index.html">Home </a></li>
-      <li><a href=
-          "AboutUs.html">About Us</a></li>
+      <li><a href="AboutUs.html">About Us</a></li>
       <li><a href="ResourcesNeeded.html">Resources Needed</a></li>
       <li>Contact Us</li>
-    </ul></ul>
+    </ul>
+    </ul>
   </nav>
-    <main>
+  <main>
 
-      <p>
-        <h3>Short Term</h3>
-        <ol>
-          <li>Assistive devices such as hearing aids, walking sticks, braille books , wheelchairs etc.</li>
-          <li>Equipment and trainers who will teach survival skills at  Vocational Centers.</li>
-          <li>Food, clothing, educational materials , school supplies and  medical needs.</li>
-          <li>Specialists and therapists  who will coach children with disabilities or developmental delays to reach key milestones. 
-            </li>
-          <li>Website to educate people on what they can do to care and support  the disabled.</li>
-        </ol>
-      </p>
+    <p>
+    <h3>Short Term</h3>
+    <ol>
+      <li>Assistive devices such as hearing aids, walking sticks, braille books , wheelchairs etc.</li>
+      <li>Equipment and trainers who will teach survival skills at Vocational Centers.</li>
+      <li>Food, clothing, educational materials , school supplies and medical needs.</li>
+      <li>Specialists and therapists who will coach children with disabilities or developmental delays to reach key
+        milestones.
+      </li>
+      <li>Website to educate people on what they can do to care and support the disabled.</li>
+    </ol>
+    </p>
 
-      <p>
-        <h3>Long Term</h3>
+    <p>
+    <h3>Long Term</h3>
 
-        <ol>
-          <li>Build residential homes  where PWD will experience  independence ,  while they  pursue academic and vocational goals.  </li>
-          <li>Act as  an ambassador  to  government agencies and outline  what we can do to improve as well as expand services we provide to PWD.</li>
-        </ol>
-      </p>
-      <p>
-        <h3>Future Service</h3>
-        We hope  to increase the number of people we cater for and provide opportunities to expand the services we give to PWD.  Therefore We   are seeking financial support from Faith Based Organizations, Grant Providers, Banks, Companies , Businesses, Philanthropists.
-      </p>
-    </main>
-    <footer> 2023 Abilities Hope Inc</footer>
-  </body>
+    <ol>
+      <li>Build residential homes where PWD will experience independence , while they pursue academic and vocational
+        goals. </li>
+      <li>Act as an ambassador to government agencies and outline what we can do to improve as well as expand services
+        we provide to PWD.</li>
+    </ol>
+    </p>
+    <p>
+    <h3>Future Service</h3>
+    We hope to increase the number of people we cater for and provide opportunities to expand the services we give to
+    PWD. Therefore We are seeking financial support from Faith Based Organizations, Grant Providers, Banks, Companies ,
+    Businesses, Philanthropists.
+    </p>
+  </main>
+  <footer> 2023 Abilities Hope Inc</footer>
+</body>
