--- a/AboutUs.html
+++ b/AboutUs.html
@@ -10,9 +10,11 @@
 
 <body>
   <header>
+    <img src="images/010AbilitiesHopeIcon.png" alt="triangular icon">
     <h1>Abilities Hope Inc</h1>
-    <h2>About Us</h2>
+
   </header>
+
   <nav>
     <ul>
       <li><a href="index.html">Home </a></li>
@@ -23,6 +25,7 @@
     </ul>
   </nav>
   <main>
+    <h2>About Us</h2>
     <p>
     <h3>Vision</h3>
     The vision of Abilities Hope Incorporation is a society in which people with disabilities(PWD() have access to
