--- a/index.html
+++ b/index.html
@@ -42,16 +42,17 @@
       <img src="images/Img003AssistiveDevice.jpg" alt="Assistive Device">
       <figcaption>Assistive Device</figcaption>
     </figure>
-    <figure class>
+    <figure>
       <img src="images/Img004Hope01.jpg" alt="Strengthening independece">
       <figcaption>Strengthening independence</figcaption>
     </figure>
+    <figure>
       <img src="images/Img005Hope02.jpg" alt="Strengthening independence">
-      <figcaption>Strengthening independence</figcaption>
+      <figcaption>Gaining Hope</figcaption>
     </figure>
-    <figure class=image1>
+    <figure>
       <img src="images/Img006Hope03.jpg" alt="Strengthening independence">
-      <figcaption>Strengthening independence</figcaption>
+      <figcaption>Joyful resilience</figcaption>
     </figure>
   </main>
   <footer>2023 designed by Software Strategy Solutions</footer>
